--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,41 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+p {
+  font-size: 16px;
+  color: #222;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+  font-size: 16px;
+  color: blue;
 }
 
-.App-link {
-  color: #61dafb;
+nav ul li {
+  float:left;
+  padding: 20px;
+  list-style: none;
+  background: #eee;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul li a {
+  text-decoration: none;
+}
+
+nav ul {
+  overflow: auto;
+}
+
+#container {
+  padding: 20px;
+  margin: 0 auto;
+  max-width: 1024px;
+}
+
+#contents {
+  margin-top: 20px;
 }
